refactor: PieceType enum에서 view 분리 및 BoardView 구현